[project]
name = "llm-proxy"
version = "0.1.0"
description = "A Python module for proxying and managing LLM (Large Language Model) requests"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "httpx>=0.24.0",
    "pytest>=8.4.1",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
